--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: AdvRLab6
 Type: Package
-Title: What the Package Does (Title Case)
+Title: The knapsack package
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Phillip Hoelscher
+Maintainer: Phillip Hoelscher <phiho267@liu.se>
+Description: Knapsack problem gets solved by the greedy, dynamic and brute force search
+License: MIT License
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
