--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,12 @@ Package: AdvRLab6
 Type: Package
 Title: The knapsack package
 Version: 0.1.0
-Author: Phillip Hoelscher
+Author: Phillip Hoelscher, Tejashree R Mastamardi
 Maintainer: Phillip Hoelscher <phiho267@liu.se>
 Description: Knapsack problem gets solved by the greedy, dynamic and brute force search
 License: MIT License
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
+VignetteBuilder: knitr
 
